--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -84,8 +84,8 @@ colPerc(table2)
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
-`
 
+Running the Fisher Test, I can conclude that the white people and the black people are different in their attitude towards capitol punishment. I can also conclude that the other people and the black people are different. Although, this test shows that there is no difference between the white people and the other people.
 
 ## Less data version
 
