comments on discussion

--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -170,3 +170,5 @@ fisherXY(mydata$cappun,mydata$race)
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+Although both of these branches included data from the same dataset, they still gave different results. The reason for getting a different result in branch number 2 compared to the master branch is because there was a different amount of people in both branches. In the master branch, there was a lot more people than the number 2 branch. The master branch had nearly 2,000 people in the dataset. In the number 2 branch, there was only around 650 people taken into consideration. So, the master branch involved around 3 times as many people than the number 2 branch. As the size of the population increases, then differences start to filter out. because. Although both of these came from the same dataset, it is evident that the larger the population is, the more differences there will be. Therefore, there was a huge difference between the master branch and the number 2 branch due to a difference in the size of the population.
